--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -52,6 +53,11 @@ dependencies {
 
     //objeto Camera View
     implementation 'androidx.camera:camera-view:1.1.0-beta02'
+
+    // Koin for Android
+     def koin_version = "3.1.2"
+     implementation "io.insert-koin:koin-android:$koin_version"
+     implementation "io.insert-koin:koin-core:$koin_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
